--- a/Breakout_Game-OOP.vcxproj
+++ b/Breakout_Game-OOP.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyStr.cpp" />
     <ClCompile Include="Paddle.cpp" />
+    <ClCompile Include="PowerUp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
@@ -140,6 +141,7 @@
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MyStr.h" />
     <ClInclude Include="Paddle.h" />
+    <ClInclude Include="PowerUp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
