--- a/Breakout_Game-OOP.vcxproj
+++ b/Breakout_Game-OOP.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyStr.cpp" />
@@ -139,6 +140,7 @@
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="HardBrick.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MyStr.h" />
     <ClInclude Include="NormalBrick.h" />
