--- a/Breakout_Game-OOP.vcxproj
+++ b/Breakout_Game-OOP.vcxproj
@@ -152,6 +152,9 @@
     <ClInclude Include="SaveLoadManager.h" />
     <ClInclude Include="UnbreakableBrick.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="log.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
